@@ -1,11 +1,11 @@
         :(){:|:&};: [HACKATHON] :(){:|:&};:        
 
-Hackathon is a proof of concept for a competitive  
-       multiplayer team-based hacking game.        
+Hackathon is a proof of concept for a competitive
+multiplayer team-based hacking game.
 
- Players use tools to monitor traffic, break into  
- servers, and decrypt stolen data to navigate and  
+Players use tools to monitor traffic, break into
+servers, and decrypt stolen data to navigate and
 abuse a virtual network better than your opponents.
 
-    The game is currently at version 2 and very    
+The game is currently at version 2 and very
 early in development so things are prone to change.
